<resources>
    <string name="app_name">Music</string>
    <string name="btn_xao_tron">Xáo trộn</string>
    <string name="btn_yeu_thich">Yêu thích</string>
    <string name="btn_danh_sach_phat">Danh sách phát</string>
    <string name="tong_bai_hat_tim_duoc">Tổng bài hát</string>
    <string name="the_gioi_am_nhac">Music</string>
    <string name="Ten_bai_hat">Tên bài hát</string>
    <string name="btn_back">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading…</string>
    <string name="btn_lap_lai">Lặp lại</string>
    <string name="btn_equalizer">Cân bằng</string>
    <string name="btn_timer">Hẹn giờ</string>
    <string name="btn_share">Chia sẻ</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="icon_app">Icon</string>
    <string name="text_nav">Welcome to Music</string>
    <string name="feedback">Phản hồi</string>
    <string name="setting">Cài đặt</string>
    <string name="about">Thông tin</string>
    <string name="exit">Thoát</string>
    <string name="album_bai_hat">Tên album</string>
    <string name="seach_view">Tìm kiếm</string>
    <string name="anhBH">ảnh bài hát</string>
    <string name="ten_play_list">Tên danh sách phát</string>
    <string name="xoa_danh_sach_phat">Xóa danh sách phát</string>
    <string name="uer_name">Tên người dùng</string>
    <string name="min_15">15 phút</string>
    <string name="min_30">30 phút</string>
    <string name="min_60">1 tiếng</string>
    <string name="add_Bh">Thêm bài hát</string>
    <string name="xoa_Bh">Xóa bài hát</string>
    <string name="search_song">Tìm bài hát</string>
    <string name="topic_han_hoi">Chủ đề </string>
    <string name="email_phan_hoi">Địa chỉ Email người nhận</string>
    <string name="ndfeedback">Nội dung cần hỏi</string>
    <string name="send">Gửi</string>
    <string name="set_them">Cài đặt màn hình</string>
    <string name="sap_xep">Sắp sếp</string>
    <string name="version_name">Version App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Xin chào!"</string>
    <string name="invalid_username"> Email không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải > 5 ký tự</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="or_sign_in_with">hoặc Đăng nhập bằng</string>
    <string name="todo">TODO</string>
    <string name="to">TODO</string>
    <string name="sig">Chưa có tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Email</string>
    <string name="comfim_pass">Nhập lại mật khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="dang_ki">Đăng ký</string>
    <string name="co_tk">Bạn đã có tài khoản?</string>
</resources>