<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnXaoTron"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/btn_xao_tron"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/icon_xao_tron"
                    android:text="@string/btn_xao_tron"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btnYeuThich"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/btn_yeu_thich"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/icon_yeu_thich"
                    android:textColor="@color/black"
                    android:text="@string/btn_yeu_thich"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btnDanhSachPhat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/btn_danh_sach_phat"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/icon_danh_sach_phat"
                    android:text="@string/btn_danh_sach_phat"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <TextView
                android:id="@+id/totalBH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/tong_bai_hat_tim_duoc"
                android:layout_margin="10dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.music.NowPlaying"
            tools:layout="@layout/fragment_now_playing"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menuView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>