<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:background="@color/black">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/set_them"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/them_TimHong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_tron"
            android:layout_weight="1"
            app:tint="@color/music_icon_background"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/them_Xanh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_tron"
            app:tint="@color/purple_500"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/them_Den"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_tron"
            android:layout_weight="1"
            app:tint="@color/black"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/them_Do"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_tron"
            app:tint="@android:color/holo_red_light"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/them_Vang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_tron"
            app:tint="@android:color/holo_orange_light"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/sap_xep"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:layout_weight="1"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_sort"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_sort"
            app:tint="?attr/themeColor"
            android:padding="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="start"
        android:padding="16sp"
        tools:ignore="RtlSymmetry"/>
</LinearLayout>